--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "doc": "docs",
     "test": "test"
   },
+  "engines": {
+      "node": "4.1.1",
+      "npm": "2.1.x"
+    },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "webpack",
