Complete upload form

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "wavesurfer.js": "^2.0.0-beta01",
     "webpack": "^3.5.5"
   },
   "description": "[Trello link][trello]",
@@ -23,9 +24,9 @@
     "test": "test"
   },
   "engines": {
-      "node": "4.1.1",
-      "npm": "2.1.x"
-    },
+    "node": "4.1.1",
+    "npm": "2.1.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "webpack",
