--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment-timezone": "^0.5.13",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-loading": "^0.1.4",
     "react-moment": "^0.6.4",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
