--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "expose-loader": "^0.7.3",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
@@ -15,10 +16,11 @@
     "react-moment": "^0.6.4",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
+    "react-wavesurfer": "^0.8.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "wavesurfer.js": "^2.0.0-beta01",
+    "wavesurfer.js": "^1.4.0",
     "webpack": "^3.5.5"
   },
   "description": "[Trello link][trello]",
