--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react-router-dom": "^4.1.2",
     "react-wavesurfer": "^0.8.6",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "wavesurfer.js": "^1.4.0",
     "webpack": "^3.5.5"
@@ -49,5 +48,8 @@
   "bugs": {
     "url": "https://github.com/musa-raza/awaaz-/issues"
   },
-  "homepage": "https://github.com/musa-raza/awaaz-#readme"
+  "homepage": "https://github.com/musa-raza/awaaz-#readme",
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
+  }
 }
